# gurmukhi-transliterate

./: .gitignore  README.md  index.html  pyproject.toml  server.py  vercel.json
api/: compare.py  identify.py  legacy.py  other.py  transliterate.py
gurmukhi_transliterate/: __init__.py  _core.py  compare.py  iso15919.py  practical.py  romanizer.py  schwa.py  systems.py
tests/: test_api.py  test_character_coverage.py  test_compare.py  test_iso15919.py  test_legacy.py  test_practical.py  test_schwa_deletion.py  test_systems.py
