[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "gurmukhi-transliterate"
version = "0.1.0"
description = "Gurmukhi script transliteration: ISO 15919, practical romanization, and legacy font conversion"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["gurmukhi_transliterate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
